@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST happymapper-0.3.0.gem 29184 RMD160 f8a522d3effebe90c29facc54191f64f3da02593 SHA1 256e96e1358ab214dc22ad17df2d70d2fb22688c SHA256 19bd684980eb28704402d97e1dd7cb2582a54ea6c92c877d4d38dd15387c9b32
 DIST happymapper-0.3.2.gem 25600 RMD160 c314c5a9658ee906e1a7994605685afd3312053e SHA1 45713b52dfb0e79e76908a5b65ef81b21e15298b SHA256 2e32acb93dabc76ec1361acf4a9119b73202cadc08e2f3e42d591ce62b140aa2
-EBUILD happymapper-0.3.0.ebuild 657 RMD160 90f09f0f578b09173312945c0df0c8781484dc97 SHA1 7bc7c9cbf9a12b89735d85ed7e5d2ecd4338e08e SHA256 10e5d64b6806e71bcc159834372d0baf96ac8cd7f14043e0b3192a3fe2f9f2cc
 EBUILD happymapper-0.3.2.ebuild 599 RMD160 236f534b7413464bd8b6b97bced96cfc1f7bf697 SHA1 28a39c29c08d42423e1302a047114fdb3bc67012 SHA256 d1e106fa1bfbb9c581e2a1dfe35c8fd96d0ab150a283e421ad424ed686ae4c34
-MISC ChangeLog 428 RMD160 f85ba5438874f5d70b327d440b629c5f226024ec SHA1 2f7ab01a299d24a68eaf88a771c3eed07c2c0659 SHA256 d4a3b827a31659b5f1e135b31f63d5f03dcf941a01f862c4cb8661dee9e4ce6a
+MISC ChangeLog 528 RMD160 7b91912edf7f508d35999c17332e42f0a9a0571f SHA1 6569e6b033ae2ea13af38b237917a3a55a43c638 SHA256 d4598b242e725dd36850619af1e7120f4274b916630729dbae074e0b445f63a0
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAkw3MO4ACgkQZihJkut28StPZgD/UQ9t0Hu8TedkfTWKpTjMTj22
-6kj2FtMCx7iWKaiBJ9cBAKyrfvnKF4FtTAsI2y4UfRKa3pz/khxFB7wp1+iJierr
-=3uLA
+iF4EAREIAAYFAk4lD+cACgkQiIP6VqMIqNdTiQD8DBOwmt3y5qpchSEooKeBY5G+
+J0p2QSNauG+G3QiUvQkA/i+5W8RffyhKgCnW3WwzoHT4orvpFLBOgxf2YzVOV66a
+=tiQY
 -----END PGP SIGNATURE-----
