@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/happymapper
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jul 2011; Hans de Graaff <graaff@gentoo.org> -happymapper-0.3.0.ebuild:
+  Remove old version.
 
 *happymapper-0.3.2 (09 Jul 2010)
 
